--- a/client/package.json
+++ b/client/package.json
@@ -34,7 +34,5 @@
             "last 1 safari version"
         ]
     },
-    "devDependencies": {
-        "eslint-config-prettier": "^6.4.0"
-    }
+    "devDependencies": {}
 }
