--- a/package.json
+++ b/package.json
@@ -10,16 +10,19 @@
         "client": "cd client && npm run start",
         "install": "cd client && npm install",
         "build": "cd client && npm run build",
-        "heroku-postbuild": "npm run build"
+        "heroku-postbuild": "npm run build",
+        "lint": "npx eslint '**/*.js' --ignore-pattern 'node_modules'"
     },
     "author": "",
     "license": "MIT",
     "devDependencies": {
         "concurrently": "^4.1.1",
         "eslint": "^6.5.1",
+        "eslint-config-prettier": "^6.4.0",
         "eslint-plugin-jsx": "^0.1.0",
         "eslint-plugin-prettier": "^3.1.1",
         "eslint-plugin-react": "^7.16.0",
+        "husky": "^3.0.9",
         "nodemon": "^1.19.1"
     },
     "dependencies": {
@@ -29,5 +32,10 @@
         "graphql": "^14.4.1",
         "if-env": "^1.0.4",
         "jsonwebtoken": "^8.5.1"
+    },
+    "husky": {
+        "hooks": {
+            "pre-commit": "npm run lint"
+        }
     }
 }
