--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
         "eslint-plugin-prettier": "^3.1.1",
         "eslint-plugin-react": "^7.16.0",
         "husky": "^3.0.9",
-        "nodemon": "^1.19.1"
+        "nodemon": "^1.19.1",
+        "prettier": "^1.18.2"
     },
     "dependencies": {
         "apollo-server-express": "^2.6.7",
@@ -31,7 +32,8 @@
         "express": "^4.17.1",
         "graphql": "^14.4.1",
         "if-env": "^1.0.4",
-        "jsonwebtoken": "^8.5.1"
+        "jsonwebtoken": "^8.5.1",
+        "mongodb": "^3.3.3"
     },
     "husky": {
         "hooks": {
