--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
         "apollo-server-express": "^2.6.7",
         "dotenv": "^8.0.0",
         "express": "^4.17.1",
+        "firebase": "^7.2.1",
+        "firebaseui": "^4.2.0",
         "graphql": "^14.4.1",
         "if-env": "^1.0.4",
         "jsonwebtoken": "^8.5.1",
