--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
         "graphql": "^14.4.1",
         "if-env": "^1.0.4",
         "jsonwebtoken": "^8.5.1",
-        "mongodb": "^3.3.3"
+        "mongodb": "^3.3.3",
+        "mongoose": "^5.7.5"
     },
     "husky": {
         "hooks": {
