--- a/.eslintrc
+++ b/.eslintrc
@@ -4,6 +4,7 @@
         "es6": true,
         "browser": true
     },
+    "parser": "babel-eslint",
     "parserOptions": {
         "sourceType": "module",
         "ecmaFeatures": {
