--- a/.eslintrc
+++ b/.eslintrc
@@ -188,7 +188,7 @@
         "lines-around-comment": "off",
         "lines-between-class-members": "off",
         "multiline-ternary": "off",
-        "new-cap": "warn",
+        "new-cap": "off",
         "new-parens": "off",
         "newline-per-chained-call": "off",
         "no-array-constructor": "warn",
