--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
         "apollo-boost": "^0.4.4",
         "formik": "^1.5.8",
         "graphql": "^14.5.8",
+        "materialize-css": "^1.0.0",
         "moment": "^2.24.0",
         "react": "^16.8.6",
         "react-dom": "^16.8.6",
