--- a/client/package.json
+++ b/client/package.json
@@ -4,6 +4,7 @@
     "private": true,
     "proxy": "http://localhost:3001/",
     "dependencies": {
+        "@apollo/react-hoc": "^3.1.3",
         "@apollo/react-hooks": "^3.1.3",
         "apollo-boost": "^0.4.4",
         "formik": "^1.5.8",
