(refactor) Enabled graphql playground in prod

--- a/.eslintrc
+++ b/.eslintrc
@@ -29,7 +29,7 @@
         "no-empty-character-class": "error",
         "no-ex-assign": "warn",
         "no-extra-boolean-cast": "warn",
-        "no-extra-parens": "warn",
+        "no-extra-parens": "off",
         "no-extra-semi": "error",
         "no-func-assign": "off",
         "no-inner-declarations": "warn",
@@ -51,7 +51,7 @@
         "accessor-pairs": "warn",
         "array-callback-return": "warn",
         "block-scoped-var": "warn",
-        "class-methods-use-this": "warn",
+        "class-methods-use-this": "off",
         "complexity": ["warn", 32],
         "consistent-return": "off",
         "curly": "warn",
