--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "jsonwebtoken": "^8.5.1",
     "materialize-css": "^1.0.0",
     "mongodb": "^3.3.3",
+    "mongoose": "^5.7.5",
     "react-materialize": "^3.4.1"
   },
   "husky": {
